# hayabusa

./: .cproject  .gitignore  .project  CMakeDetermineASM-FASMCompiler.cmake  CMakeLists.txt  CMakeTestASM-FASMCompiler.cmake  FindPrecompiledHeaders.cmake  attacks.h  bits.h  board.cpp  board.h  board.tcc  boardbase.cpp  boardbase.h  boardbase.tcc  book.cpp  book.h  coloredboard.cpp  coloredboard.h  coloredboard.tcc  compoundscore.h  console.cpp  console.h  constants.h  eval.cpp  eval.h  eval.tcc  evalinit.cpp  evolution.cpp  evolution.h  game.cpp  game.h  game.tcc  generateCaptureMoves.tcc  generateMoves.tcc  genmates.tcc  hayabusa.cpp  hayabusa.files  hayabusa.h  hayabusa.includes  (+66 more)
.kdev4/: hayabusa.kdev4
src/: CMakeASM-FASMInformation.cmake  attacks.h  board.cpp  board.h  coloredboard.h  coloredboard.tcc  eval.h  generateMoves.tcc  hayabusa.qrc  main.cpp  move.h  pgn.h  setpiece.asm  test.h  testpositions.h  transpositiontable.h  ttentry.h
src/.kdev4/: src.kdev4
